Fixed personal info wrap

--- a/src/app/(dashboard)/about-me/styles.module.css
+++ b/src/app/(dashboard)/about-me/styles.module.css
@@ -191,6 +191,9 @@
   overflow: hidden !important;
   width: 100%;
   height: 100%;
+  white-space: pre-wrap; /* This preserves whitespace and wraps the text */
+  word-wrap: break-word; /* This ensures long words break and don't overflow */
+  overflow-y: auto; /* Adds a scrollbar if content overflows vertically */
 }
 
 .bodyText {
@@ -203,6 +206,8 @@
   margin-left: 1.25rem;
   background: inherit !important;
   overflow-wrap: break-word !important;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 
@@ -371,4 +376,9 @@
     background: #011221;
     color: #607b96;
     font-size: 1em;
+}
+
+.textContent {
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
